--- a/edit/saml2int/sp_requirements.adoc
+++ b/edit/saml2int/sp_requirements.adoc
@@ -2,17 +2,116 @@
 
 === Web Browser SSO
 
-==== Identifiers
+==== SP-Initiated SSO
+
+Service Providers must support the direct generation of authentication request messages conforming to the SAML Authentication Request Protocol <<SAML2Core>>.
+
+Service Providers that want to bypass user-initiated discovery SHOULD support the SP Request Initiation Profile and Protocol defined in <<SAML2SPRIP>>.
+
+Service Providers MUST NOT require Identity Providers to support unsolicited responses (or so-called IdP-initiated SSO) <<SAML2Prof>> though they MAY support them as a voluntary means of bypassing discovery.
 
 ==== Deep Linking
 
-_(Suggest moving this below "SP-Initiated SSO" or "Authentication Requests", below)_
+Applications that support deep linking and direct addressability of protected resources (the vast majority) MUST maintain support for such links during a Browser SSO profile interaction. That is, it MUST be possible to request an arbitrary protected resource and (authorization permitting) have it supplied as the result of a successful Browser SSO profile exchange.
 
-Applications that support deep linking and direct addressability of protected resources MUST maintain support for such links in the presence of thw Web Browser SSO interaction. That is, it MUST be possible to request an arbitrary protected resource and (authorization permitting) have it supplied as the result of a successful SAML SSO profile exchange. In addition, it is RECOMMENDED that Service Providers support the preservation of POST bodies across a successful SSO profile exchange, subject to size limitations dictated by policy or implementation constraints.
+It is RECOMMENDED that Service Providers support the preservation of POST bodies across a successful SSO profile exchange, subject to size limitations dictated by policy or implementation constraints.
 
-The SAML binding-specific `RelayState` feature <<SAML2Prof>> is typically used to maintain the state information required to satisfy both of these requirements, the exact detail of which is left to implementations.
+The SAML binding-specific `RelayState` feature <<SAML2Bind>> is typically used to maintain the state information required to satisfy both of these requirements, the exact detail of which is left to implementations.
 
-Requiring IdPs to support unsolicited responses (or so-called IdP-initiated SSO) <<SAML2Prof>> is not a substitute for this requirement.
+==== Support for Multiple IdPs
+
+Service Providers MUST allow clients the option to authenticate specific resource URLs against more than one identity provider. _(This language is from the Impl Profile)_
+
+When more than one Identity Provider authenticates the same resource URL, IdP selection SHOULD be supported using the OASIS SSTC SAML v2.0 Identity Provider Discovery Profile <<IdPDisco>>.
+
+==== Requests
+
+===== Binding
+
+Requests MUST be encoded via the HTTP-Redirect binding. <<SAML2Bind>>
+
+===== Avoiding Frames
+
+Requests MUST NOT be issued inside an HTML frame or via any mechanism that would require the use of third-party cookies by the Identity Provider to establish or recover a session with the user agent. This will typically imply that requests must involve a full-frame redirect, in order that the top level window origin be associated with the Identity Provider.
+
+===== Request Content
+
+The `<samlp:AuthnRequest>` message MUST either omit the `<samlp:NameIDPolicy>` element (RECOMMENDED), or the element MUST contain an `AllowCreate` attribute of "true" and MUST NOT contain a `Format` attribute.
+
+The message MUST NOT contain an `AssertionConsumerServiceIndex` attribute (i.e., the desired endpoint MUST be the default, or identified via the `AssertionConsumerServiceURL` attribute).
+
+===== Authentication Contexts
+
+A Service Provider that does not require a specific `<saml:AuthnContextClassRef>` value MUST NOT include a `<samlp:RequestedAuthnContext>` element in its requests.
+
+A Service Provider that requires specific `<saml:AuthnContextClassRef>` values MUST specify the allowable values in a `<samlp:RequestedAuthnContext>` element in its requests, with the `Comparison` attribute set to `exact`.
+
+_(Do we need the text below?)_
+
+An SP SHOULD only request a RequestedAuthnContext request in the presence of an arrangement between the Identity and Service Providers regarding the Authentication Context definitions in use. 
+
+_(Do we want anything about error handling?)_ 
+
+==== Responses
+
+===== Binding
+
+Service Providers MUST support the HTTP-POST binding for the receipt of `<samlp:Response>` messages and MAY support the HTTP-Artifact binding. <<SAML2Bind>>
+
+The endpoint(s) at which a Service Provider supports receipt of `<samlp:Response>` messages MUST be protected by TLS/SSL.
+
+===== XML Encryption
+
+Service Providers MUST support decryption of `<saml:EncryptedAssertion>` elements. Support for other encrypted constructs is OPTIONAL.
+
+===== Forced Re-Authentication
+
+Service Providers that include a `ForceAuthn` attribute of `true` in their requests SHOULD test the currency of the `AuthnInstant` element in the received assertions to verify the currency of the authentication event.
+
+_This is necessary because clients can freely generate requests that do not specify this attribute, potentially bypassing the SP's intent._
+
+==== Subject Identification
+
+===== NameID Formats
+
+Service Providers MUST support arbitrary `<saml:NameID>` elements regardless of `Format`, for the purposes of Single Logout.
+
+Service Providers MUST NOT require the presence of a `<saml:NameID>` element and MUST NOT rely on the content of this element for long term identification of subjects;  `<saml:Attribute>` elements MUST be used for this purpose in the manner detailed below.
+
+===== Subject Identifiers
+
+If a Service Provider requires persistent tracking/identification of its users (as most do), then it MUST support one or both of the SAML Attributes defined by <<SAML2SubjId>> for this purpose.
+
+If a Service Provider requires coordination and/or correlation of user activity between itself and other Service Providers, then the SAML Attribute named `urn:oasis:names:tc:SAML:attribute:subject-id` is appropriate. Otherwise the SAML Attribute named `urn:oasis:names:tc:SAML:attribute:pairwise-id` should be used.
+
+Service Providers MAY support legacy or historical `<saml:NameID>` and `<saml:Attribute>` content for compatibility reasons but MUST NOT require their use.
+
+===== Subject Identifier Signaling
+
+A Service Provider MUST represent its identifier requirements in its SAML metadata, consistent with the Requirements Signaling mechanism defined in <<SAML2SubjId>>.
+
+===== Displayable Identifiers
+
+The required identifier types above are opaque, unknown to users in most cases, and unsuitable for display.
+
+Service Providers requiring the display of identifiers to users, the identification of other users via searching, selection, etc., and similar use cases SHOULD rely on additional suitable SAML Attributes such as:
+
+* `urn:oid:0.9.2342.19200300.100.1.3` (mail)
+* `urn:oid:2.16.840.1.113730.3.1.241` (displayName)
+* `urn:oid:2.5.4.42` (givenName)
+* `urn:oid:2.5.4.4` (sn)
+
+===== Identifier Scoping
+
+Service Providers MUST prevent unintended identifier collisions in the values asserted by different Identity Providers, and the required identifier types above are "scoped" to fulfill this requirement.
+
+Service Providers MUST associate identifier scopes with Identity Providers such that only authorized Identity Providers may assert identifiers in particular scopes.
+
+==== Attribute Value Constraints
+
+When consuming SAML Attributes with standardized definitions in external specifications, Service Providers MUST NOT impose constraints beyond the definitions of those attributes.
+
+_This may imply supporting extra long attribute values, attributes that contain multiple values, broad character set support, etc. Maybe this is less critical with the subject ID changes?_
 
 ==== Metadata and Trust Management
 
@@ -21,109 +120,6 @@ Requiring IdPs to support unsolicited responses (or so-called IdP-initiated SSO)
 SP deployments MUST support multiple signing certificates in IdP metadata _(do we want more language? e.g., "and must be able to validate signed IdP assertions using either certificate.)_ This makes it possible for the IdP to seamlessly migrate to a new signing key.
 
 If the SP publishes an encryption certificate in metadata, the SP deployment MUST be configurable with multiple decryption keys _(and must be able to decrypt Assertions encrypted with either of those keys)_. This makes it possible for the SP to seamlessly migrate to a new decryption key.
-
-==== SP-Initiated SSO
-
-_(Move below "Authentication Requests" heading, below?)_
-
-Service Providers must support the direct generation of authentication request messages conforming to the SAML Authentication Request Protocol <<SAML2Core>>.
-
-Service Providers that want to bypass user-initiated discovery SHOULD use the SP Request Initiation Profile and Protocol defined in <<SAML2SPRIP>>.
-
-Requiring IdPs to support unsolicited responses (or so-called IdP-initiated SSO) <<SAML2Prof>> is not a substitute for this requirement.
-
-==== SP Endpoints
-
-_(This text said "An SP that supports SAML V2.0 Web Browser SSO", but support for SAML V2.0 Web Browser SSO is mandated elsewhere by the profile)_
-
-SPs MUST include at least one AssertionConsumerService endpoint that supports the SAML V2.0 HTTP-POST binding for the SAML V2.0 Web Browser SSO protocol <<SAML2Prof>>. Occasionally an IdP will prefer to respond using the using the SAML V2.0 HTTP-Artifact Binding <<SAML2Bind>>, and therefore an AssertionConsumerService endpoint that supports the SAML V2.0 HTTP-Artifact binding MAY also be included in SP metadata. Note: An SP that supports artifact resolution MUST have at least one signing certificate in metadata.
-
-The endpoint(s) at which a Service Provider receives a `<samlp:Response>` message SHOULD be protected by TLS/SSL. If this is not the case, then Identity Providers SHOULD utilize XML Encryption and return a `<saml:EncryptedAssertion>` element in the `<samlp:Response>` message. The use of the `<saml:EncryptedID>` and `<saml:EncryptedAttribute>` elements is NOT RECOMMENDED; when possible, encrypt the entire assertion.
-
-==== Attribute Value Constraints
-
-When consuming attributes with standard definitions _(Do we need a scope here? E.g., OASIS standard attributes? Is this only about subject-id/pairwise-id and thus no longer relevant as a separate requirement?)_, Service Providers SHOULD NOT impose constraints that are not part of the definitions of those attributes.
-
-_This may imply supporting extra long attribute values, attributes that contain multiple values, broad character set support, etc._
-
-==== Subject Identifier Support
-
-===== NameID Formats
-
-Service Providers, if they rely at all on particular name identifier formats, MUST support the format `urn:oasis:names:tc:SAML:2.0:nameid-format:transient`. Reliance on other formats by Service Providers is NOT RECOMMENDED.
-
-_Note that these requirements are reflected in additional constraints on message content in subsequent sections._
-
-===== Subject Identifier Attributes
-
-SPs that require reliable identifiers bound to a subject MUST support user identification using one of the following attributes:
-
-* `urn:oasis:names:tc:SAML:attribute:subject-id`
-* `urn:oasis:names:tc:SAML:attribute:pairwise-id` 
-
-as defined in <<SAML2SubjId>>.
-
-===== Subject Identifier Signalling
-
-An SP MUST indicate its identifier requirements in metadata, consistent with the Requirements Signalling rules defined in <<SAML2SubjId>>. 
-
-===== Subject Identifier Opacity
-
-SPs MUST be able to accept and function reasonably when receiving only opaque subject identifiers. 
-
-If users are required to identify one another, SPs SHOULD additionally accept one or more relatively unique, human-readable "directory" attributes (email, name, title, etc.) for use in user searches, user pick-lists, and other interface elements. 
-
-===== Subject Identifier Uniqueness
-
-SPs MUST be able to prevent inappropriate Subject Identifier value collisions across different IdPs. SPs SHOULD use qualified identifiers to support this requirement, with the SPs validating that IdPs assert appropriate qualifiers.
-
-It is RECOMMENDED that the "Scope" Metadata extension <<MACEAttrProf>> be used to identify acceptable qualifiers from an IdP. 
-
-_(Is the following still relevant?)_
-
-Where IdPs do not assert qualified identifiers for Subject IDs, SPs SHOULD instead internally associate each Subject ID with the asserting IdP's entityID.
-
-==== Support for Multiple IdPs
-
-Service Providers MUST allow clients the option to authenticate specific resource URLs against more than one identity provider. _(This language is from the Impl Profile)_
-
-When more than one Identity Provider authenticates the same resource URL, IdP selection SHOULD be supported using the OASIS SSTC SAML v2.0 Identity Provider Discovery Profile <<IdPDisco>>.
-
-_(Note, there's overlap here with "SP-initiated SSO", given the reference to SAML2SPRIP)_
-
-==== Authentication Requests
-
-===== Authentication Request User Interface and Browser Frames
-
-Service Providers MUST NOT issue authentication requests inside a frame or via any mechanism that would require the use of third-party cookies by the Identity Provider to establish or recover a session with the user agent.
-
-_(Is there something broader we want to say about how it SHOULD be presented?)_
-
-_(n.b., I'm not clear when exactly a 3rd party cookie creates an actual issue for the authentication event. Is it the hosting site and the IdP, or the hosting site and the SP being authenticated that causes issues?)_
-
-===== Authentication Request Presentation
-
-The `<samlp:AuthnRequest>` message SHOULD contain a `<samlp:NameIDPolicy>` element with an `AllowCreate` attribute of "true". Its `Format` attribute, if present, SHOULD be set to `urn:oasis:names:tc:SAML:2.0:nameid-format:transient` _(Removed persistent)_
-
-Service Providers MUST support unsolicited `<samlp:Response>` messages (i.e., responses that are not the result of an earlier `<samlp:AuthnRequest>` message). _(Add)_
-
-===== Authentication Context Requests
-
-An SP that does not require specific AuthnContextClassRef value(s) in assertions MUST NOT include any RequestedAuthnContext elements in AuthnRequests it generates.
-
-An SP that only accepts specific AuthnContextClassRef value(s) in assertions MUST specify those allowable values in the `<samlp:RequestedAuthnContext>` element of the `<samlp:AuthnRequest>` it generates, with the `Comparison` operator set to "EXACT". An SP SHOULD only include a RequestedAuthnContext request in the presence of an arrangement between the Identity and Service Providers regarding the Authentication Context definitions in use. 
-
-_(Do we want anything about error handling?)_ 
-
-===== Testing AuthnInstant In The Context of Forced Re-Authentication
-
-Service Providers that request `ForceAuthn="true"` as part of an `<AuthnRequest>` SHOULD test the currency of the `AuthnInstant` element  in IdP assertions to verify the currency of the user authentication event. 
-
-_This is necessary because clients can generate unsolicited SSO responses that do not specify `ForceAuthn="true"`, potentially bypassing the SP's intent to require user reauthentication._
-
-==== XML Encryption
-
-Service Providers MUST support decryption of SAML V2.0 Web SSO Profile assertions using XML Encryption. Service Providers MUST support the AES-GCM block encryption algorithm as specified in <<XMLEnc>> for this encryption.
 
 === Single Logout
 
