--- a/edit/saml2int/idp_requirements.adoc
+++ b/edit/saml2int/idp_requirements.adoc
@@ -2,51 +2,49 @@
 
 === Web Browser SSO
 
-==== Identity Provider Endpoints
+==== Requests
 
-IdP metadata MUST include a `<SingleSignOnService>` endpoint that supports the SAML2 HTTP-Redirect binding as defined in <<SAML2Bind>>. A `<SingleSignOnService>` endpoint that supports the SAML2 HTTP-POST binding SHOULD also be included in IdP metadata since some SAML SP deployments favor that particular binding. Support for both bindings is strongly RECOMMENDED.
+===== Binding
 
-In verifying the Service Provider's Assertion Consumer Service, it is RECOMMENDED that the Identity Provider perform a case-sensitive string comparison between the requested `<samlp:AssertionConsumerServiceURL>` value and the values found in the Service Provider's metadata. It is OPTIONAL to apply any form of URL canonicalization, which means the Service Provider SHOULD NOT rely on differently canonicalized values in these two locations. 
+Identity Providers MUST support the HTTP-Redirect binding <<SAML2Bind>> for the receipt of `<samlp:AuthnRequest>` messages. Support for other bindings is OPTIONAL.
 
-_As an example, the Service Provider SHOULD NOT use a hostname with port number (such as https://sp.example.no:80/acs) in its request and without (such as https://sp.example.no/acs) in its metadata._
+===== Endpoint verification.
 
-==== Identity Provider Error URLs
+When verifying the `AssertionConsumerServiceURL`, it is RECOMMENDED that the Identity Provider perform a case-sensitive string comparison between the requested value and the values found in the Service Provider's metadata. It is OPTIONAL to apply any form of URL canonicalization.
 
-IdP deployers MUST include an `<errorURL>` XML attribute in metadata. This URL must point to a page that presents actions for a user to take at their organization in response to an error (that occurred at the SP).
+===== Forced Re-Authentication Support
 
-_(Note, Tom S. questions whether this should be in the errorURL vs. mdui.information elements, due in part to the lack of international language support on the errorURL)_
+Identity Providers MUST ensure that any response to a `<samlp:AuthnRequest>` that contains the attribute `ForceAuthn` set to `true` results in an authentication challenge that requires proof that the subject is present. If this condition is met, the IdP MUST also reflect this success by setting the value of the `AuthnInstant` value in the assertion it generates to a fresh value.
 
-_(move?)_ Relying parties are encouraged to direct clients to this URL – either directly or after presenting a page providing context – when an authentication error occurs that the Relying Party cannot resolve locally.
+If an Identity Provider cannot prove subject presence, then it MUST fail the authentication request and SHOULD respond to the Service Provider with a SAML error status.
 
-==== Subject Identifier Support
+==== Responses
 
-===== NameID formats
-_(new)_
+===== Binding
 
-Identity Providers MUST support the `urn:oasis:names:tc:SAML:2.0:nameid-format:transient` name identifier format as defined in <<SAML2Core>>. ~~They SHOULD support the `urn:oasis:names:tc:SAML:2.0:nameid-format:persistent` name identifier format <<SAML2Core>>.~~ Support for other formats is OPTIONAL.
+Identity Providers MUST support the HTTP-POST binding <<SAML2Bind>> for the transmission of `<samlp:Response>` messages. Support for other bindings is OPTIONAL.
 
-===== Subject Identifier Attributes
-_(new)_
+===== Assertions
 
-Identity Providers SHOULD assert either the `urn:oasis:names:tc:SAML:attribute:subject-id` and `urn:oasis:names:tc:SAML:attribute:pairwise-id` attributes to uniquely identify authenticated users as defined in <<SAML2SubjId>> consistent with the requirements signalling from the SP, which are also defined in <<SAML2SubjId>>. If an Identity Provider cannot include a required Subject Identifier attribute as signalled by the SP, the IdP MUST return a SAML error per <<SAML2Err>>.  
+Successful response messages MUST contain one and only one SAML assertion.
 
-===== Subject Identifier Signalling
+===== XML Encryption
 
-_(This is now handled in the Subject ID Draft in OASIS. Does it need to be repeated here?)_
+In the event the HTTP-POST binding <<SAML2Bind>> is used, assertions MUST be encrypted and transmitted via a `<saml:EncryptedAssertion>` element. Information intended for the consumption of the Service Provider MUST NOT be further encrypted via `<saml:EncryptedID>` or `<saml:EncryptedAttribute>` constructs.
 
-==== Forced Re-Authentication Support
+==== Subject Identifiers
 
-Identity providers MUST ensure that any response to an `<AuthnRequest>` that contains the attribute `ForceAuthn ="true"` (as defined in <<SAML2Prof>>) results in an authentication challenge that requires proof that the Subject is present. If this condition is met, the IdP MUST also reflect this success by setting the value of the `AuthnInstant` value in the assertion it generates.
+Assertions MUST contain a `<saml:NameID>` element with the `urn:oasis:names:tc:SAML:2.0:nameid-format:transient` format, as defined in <<SAML2Core>>, for the purposes of logout.
 
-If the IdP cannot prove Subject presence, the IdP MUST NOT generate a successful response and MUST generate a SAML Error. 
+Identity Providers SHOULD support one or both of the SAML Attributes defined by <<SAML2SubjId>> for non-transient identification of subjects. Support for both is RECOMMENDED.
 
-_(Probably should be moved to the_ SP requirements _section)_
+===== Subject Identifier Requirements Signaling
 
-==== Attributes
+Identity Providers MUST support the metadata-based identifier requirement signaling mechanism defined in <<SAML2SubjId>>.
 
-==== XML Encryption
+If an Identity Provider cannot or will not satisfy the requirements of a Service Provider in this respect, then it MUST fail the authentication request and SHOULD respond to the Service Provider with a SAML error status.
 
-Identity Providers MUST encrypt assertions if the Service Provider provides a suitable key in its metadata. Identity Providers MUST support the AES-GCM block encryption algorithm as specified in <<XMLEnc>> for this encryption.
+In the absence of any signaling by a Service Provider, an Identity Provider is free to supply either, both, or neither SAML Attribute, or to return an error as it sees fit.
 
 === Single Logout
 
