--- a/edit/fedinterop/references.adoc
+++ b/edit/fedinterop/references.adoc
@@ -1,4 +1,4 @@
-== References
+﻿== References
 
 [bibliography]
 
@@ -12,22 +12,20 @@
 - [[[SAML2Prof]]] OASIS Standard, Profiles for the OASIS Security Assertion Markup Language (SAML) V2.0, March 2005. http://docs.oasis-open.org/security/saml/v2.0/saml-profiles-2.0-os.pdf
 - [[[SAML2-xsd]]] XML Schema, SAML V2.0 Assertion Schema, March 2005. http://docs.oasis-open.org/security/saml/v2.0/saml-schema-assertion-2.0.xsd
 - [[[SAML2MD-xsd]]] XML Schema, Metadata for the OASIS Security Assertion Markup Language (SAML) V2.0, March 2005. http://docs.oasis-open.org/security/saml/v2.0/saml-schema-metadata-2.0.xsd
-- [[[SAML2MDIOP]]] OASIS Committee Specification, SAML V2.0 Metadata Interoperability Profile Version 1.0, August 2009. http://docs.oasis-open.org/security/saml/Post2.0/sstc-metadata-iop.html
+- [[[SAML2MDIOP]]] OASIS Committee Specification, SAML V2.0 Metadata Interoperability Profile Version 1.0, August 2009. http://docs.oasis-open.org/security/saml/Post2.0/sstc-metadata-iop.pdf
 - [[[SAML2MetaAlgSup]]] OASIS Committee Specification, SAML V2.0 Metadata Profile for Algorithm Support Version 1.0, February 2011. http://docs.oasis-open.org/security/saml/Post2.0/sstc-saml-metadata-algsupport-v1.0-cs01.pdf
 - [[[SAML2ECP]]] OASIS Committee Specification, SAML V2.0 Enhanced Client or Proxy Profile Version 2.0, August 2013. http://docs.oasis-open.org/security/saml/Post2.0/saml-ecp/v2.0/cs01/saml-ecp-v2.0-cs01.pdf
 - [[[MetaUi]]] OASIS Committee Specification, SAML V2.0 Metadata Extensions for Login and Discovery User Interface Version 1.0, April 2012. http://docs.oasis-open.org/security/saml/Post2.0/sstc-saml-metadata-ui/v1.0/sstc-saml-metadata-ui-v1.0.pdf
 - [[[MetaAttr]]] OASIS Committee Specification, SAML V2.0 Metadata Extension for Entity Attributes Version 1.0, August 2009. http://docs.oasis-open.org/security/saml/Post2.0/sstc-metadata-attr-cd-01.pdf
 - [[[SAML2ASLO]]] OASIS Committee Specification, SAML V2.0 Asynchronous Single Logout Profile Extension Version 1.0, November 2012. http://docs.oasis-open.org/security/saml/Post2.0/saml-async-slo/v1.0/cs01/saml-async-slo-v1.0-cs01.pdf
-- [[[XMLDsig]]] W3C Recommendation, XML Signature Syntax and Processing (Second Edition), June 2008. http://www.w3.org/TR/xmldsig-core/
-- [[[MDQ]]] Internet-Draft, Metadata Query Protocol, July 2017. https://tools.ietf.org/html/draft-young-md-query-07
-- [[[SAML-MDQ]]] Internet-Draft, SAML Profile for the Metadata Query Protocol, October 2014. https://tools.ietf.org/html/draft-young-md-query-saml-07
+- [[[MDQ]]] IETF Internet-Draft, Metadata Query Protocol, July 2017. https://tools.ietf.org/html/draft-young-md-query-07
+- [[[SAML-MDQ]]] IETF Internet-Draft, SAML Profile for the Metadata Query Protocol, October 2014. https://tools.ietf.org/html/draft-young-md-query-saml-07
 - [[[IdPDisco]]] OASIS Committee Specification, Identity Provider Discovery Service Protocol and Profile, March 2008. http://docs.oasis-open.org/security/saml/Post2.0/sstc-saml-idp-discovery.pdf
-- [[[SAML2int]]] Kantara Initiative Report, SAML 2.0 Interoperability Deployment Profile Version 0.2.1. http://saml2int.org/profile/0.2.1/
 - [[[RFC4051]]] IETF RFC 4051, Additional XML Security Uniform Resource Identifiers, April 2005. https://www.ietf.org/rfc/rfc4051.txt
-- [[[XMLEnc]]] D. Eastlake et al. XML Encryption Syntax and Processing. World Wide Web Consortium Recommendation, April 2013. https://www.w3.org/TR/xmlenc-core1/
-- [[[XMLEnc11]]] D. Eastlake et al. XML Encryption Syntax and Processing Version 1.1. World Wide Web Consortium Last Call Working Draft. http://www.w3.org/TR/2010/WD-xmlenc-core1-20100513/
+- [[[XMLEnc]]] D. Eastlake et al. XML Encryption Syntax and Processing. World Wide Web Consortium Recommendation, December 2002. https://www.w3.org/TR/xmlenc-core/
+- [[[XMLEnc11]]] D. Eastlake et al. XML Encryption Syntax and Processing Version 1.1. World Wide Web Consortium Recommendation, April 2013. https://www.w3.org/TR/xmlenc-core1/
 - [[[XMLSig]]] D. Eastlake et al. XML-Signature Syntax and Processing, Second Edition. World Wide Web Consortium Recommendation, June 2008. http://www.w3.org/TR/xmldsig-core/
-- [[[SAML-EC]]] IETF Internet Draft, SAML Enhanced Client SASL and GSS-API Mechanisms. https://datatracker.ietf.org/doc/draft-ietf-kitten-sasl-saml-ec/
+- [[[SAML-EC]]] IETF Internet Draft, SAML Enhanced Client SASL and GSS-API Mechanisms, October 2017. https://tools.ietf.org/html/draft-ietf-kitten-sasl-saml-ec-16
 - [[[BetterCrypto]]] BetterCrypto.org, Applied Crypto Hardening. https://bettercrypto.org
 - [[[RFC7457]]] IETF RFC 7457, Summarizing Known Attacks on Transport Layer Security (TLS) and Datagram TLS (DTLS), February 2015. https://www.ietf.org/rfc/rfc7457.txt
 - [[[XMLEncBreak]]] Jager and Somorovsky, How to Break XML Encryption, October 2011. http://www.nds.rub.de/media/nds/veroeffentlichungen/2011/10/22/HowToBreakXMLenc.pdf
